add prettier. some really minor cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,14 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <video id="webcam" autoplay playsinline width="640" height="480" style="visibility: hidden;"></video>
+    <video
+      id="webcam"
+      autoplay
+      playsinline
+      width="640"
+      height="480"
+      style="visibility: hidden"
+    ></video>
   </body>
 </html>
