--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <!-- Google tag (gtag.js) -->
   <script
     async
-    src="https://www.googletagmanager.com/gtag/js?id=G-TB2JYFNW2S"
+    src="https://www.googletagmanager.com/gtag/js?id=G-8ZCGCGM275"
   ></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -37,7 +37,8 @@
       dataLayer.push(arguments);
     }
     gtag("js", new Date());
-    gtag("config", "G-TB2JYFNW2S");
+
+    gtag("config", "G-8ZCGCGM275");
   </script>
   <body>
     <div id="root"></div>
